# kidsai

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/ai/: base.py
backend/app/ai/embeddings/: __init__.py  qwen_embeddings.py
backend/app/ai/llm/: __init__.py  claude_provider.py  deepseek_provider.py  qwen_provider.py
backend/app/ai/stt/: __init__.py  volcano_stt.py  whisper_provider.py
backend/app/ai/tts/: __init__.py  edge_tts_provider.py  volcano_tts.py
backend/app/api/: deps.py
backend/app/api/schemas/: auth.py  character.py  chat.py  child.py
backend/app/api/v1/: auth.py  characters.py  chat.py  children.py  conversations.py  courseware.py  goals.py  router.py  voice.py
backend/app/db/: session.py
backend/app/models/: __init__.py  character.py  child.py  conversation.py  courseware.py  learning_goal.py  learning_progress.py  parent.py
backend/app/services/: chat_service.py  courseware_processor.py  prompt_engine.py  rag_engine.py  safety_filter.py  voice_session.py
backend/app/tasks/: celery_app.py  process_courseware.py
backend/scripts/: seed_characters.py  test_conversation.py  test_websocket.py
backend/tests/: conftest.py  test_prompt_engine.py  test_safety_filter.py
frontend/: pubspec.yaml
frontend/lib/: app.dart  main.dart
frontend/lib/core/constants/: api_constants.dart
frontend/lib/core/network/: api_client.dart  websocket_manager.dart
(+15 files in other folders)
